package it.trenical.common.model.tratte.strategy;

public interface CalcoloTrattaStrategy {

    int calcolaDurata(int distanzaKm);

    double calcolaPrezzo(int distanzaKm);
}
